# lv2_rs

./: README.md  install.sh  package.sh
atom/: Cargo.toml
atom/src/: lib.rs
examples/: Cargo.toml  build.rs  fake-aarch64-ld.sh  fake-ld.sh
examples/.cargo/: config
examples/examples.lv2/: manifest.ttl
examples/src/: amp.rs  amp.ttl  divider.rs  divider.ttl  lib.rs  manifest.ttl  manifest.ttl.in  midigate.rs  midigate.ttl  osc.rs  osc.ttl  quant.rs  quant.ttl  scope.rs  scope.ttl
log/: Cargo.toml
log/src/: lib.rs
lv2core/: Cargo.toml
lv2core/src/: lib.rs
midi/: Cargo.toml
midi/src/: lib.rs
urid/: Cargo.toml
urid/src/: lib.rs
